fixed bugs, optimized code

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
       <div class="search-container">
         <form>
           <input
-            id="search-input"
             type="text"
-            class="search-input"
+            id="search-input"
             placeholder="Paste YouTube video URL here..."
             autocomplete="off"
           />
@@ -37,27 +36,25 @@
       </div>
 
       <div class="meta-data-container">
-        <!-- <div class="meta-data-item">
-            <div id="video-title">TITLEEEEEEEE</div>
-        </div>
-        <div class="meta-data-item">
+        <!-- 
+            <div id="video-title">Title</div>
             <div id="video-thumbnail"><img src="https://i.ytimg.com/vi/9bZkp7q19f0/hqdefault.jpg"></div>
-        </div> -->
+        -->
       </div>
 
       <div class="summary-container">
-        <!-- <div class="summary-text">
+        <!-- <div class="summary">
         <h2>Video Summary:</h2>
-        <div class="summary">
-        </div>
+        <div class="summary-text">Summary</div>
       </div> -->
       </div>
-      <footer>
-        <a href="https://github.com/UmerrAli" target="_blank">
-          <img src="./img/github.svg" alt="github" />
-          <span>Github</span>
-        </a>
-      </footer>
     </main>
+
+    <footer>
+      <a href="https://github.com/UmerrAli/YouTube-Summarizer" target="_blank">
+        <img src="./img/github.svg" alt="github" />
+        <span>Github</span>
+      </a>
+    </footer>
   </body>
 </html>
